--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.2",
+    "@angular/animations": "^8.2.2",
+    "@angular/cdk": "^8.1.3",
     "@angular/common": "~8.2.2",
     "@angular/compiler": "~8.2.2",
     "@angular/core": "~8.2.2",
     "@angular/forms": "~8.2.2",
     "@angular/http": "~7.0.0",
+    "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.2.2",
     "@angular/platform-browser-dynamic": "~8.2.2",
     "@angular/router": "~8.2.2",
